--- a/website/assets/style.css
+++ b/website/assets/style.css
@@ -1,7 +1,18 @@
 .flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card{
+  margin: 15px;
+  border: 1px solid grey;
+  transition: 0.5s
+}
+
+.card:hover{
+  transform: scale(0.95);
 }
 
 .center {
@@ -14,12 +25,6 @@
   width: auto;
 }
 
-.font {
-  height: 10vh;
-  font-family: 'Open Sans', sans-serif;
-  margin-bottom: 0px;
-}
-
 .margin {
   margin-bottom: 0px;
 }
@@ -27,4 +32,8 @@
 h1 {
   font-family: 'Kaushan Script', cursive;
   margin-bottom: 50px;
+}
+
+.hidden {
+  display: none
 }
